Fix `@InlineMe` generator: type variable patterns and bridge methods (#97)
* Fix `@InlineMe` generator: type variable patterns and bridge methods

Derive parameters from the generic signature, so type variables become `*`
instead of their erasure, which can never match at a call site. Skip bridge
and synthetic members, which carry a copy of the annotation of the method
they delegate to.

Read both the main and test type table, write the generated recipes to
`build/generated`, and refresh the type tables to pick up Guava 33.7.0.

* Pass the output directory to the `@InlineMe` generator from the build

* Simplify the `@InlineMe` generator after review

* Match constructors on `<constructor>` in generated method patterns

* Document how to update the `@InlineMe` recipes in rewrite-migrate-java

* Point back to this repository from the generated recipe header